--- a/signin.html
+++ b/signin.html
@@ -20,7 +20,7 @@
       var usr = prompt("Usuari");
       var pass = prompt("Contrasenya");
 
-      if(data.users.[usr]){
+      if(data.users[usr]){
         if(data.users[usr].pass = pass){
           localStorage.usr = usr;
         }
