--- a/signin.html
+++ b/signin.html
@@ -51,7 +51,8 @@
 
 		req.onreadystatechange = () => {
 		  if (req.readyState == XMLHttpRequest.DONE) {
-		    alert("Usuari creat i sessió iniciada");
+		    alert("Usuari creat. Inicia sessió.");
+			main()
 		  }
 		};
 		
