--- a/signin.html
+++ b/signin.html
@@ -23,6 +23,7 @@
       if(data.users[usr]){
         if(data.users[usr].pass = pass){
           localStorage.usr = usr;
+          window.location.href = "./plans";
         }
         else{
           alert("Conttasenya incorrecta")
